<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/img_cnct_fb_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin24"
                android:src="@drawable/user" />

            <d1marine.com.nasgram.customui.CustomTextViewBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin10"
                android:gravity="center"
                android:minHeight="@dimen/zero_height"
                android:minWidth="@dimen/zero_height"
                android:text="@string/string_find_fb_friends"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorBlack" />

            <d1marine.com.nasgram.customui.CustomTextViewNormal
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:minHeight="@dimen/zero_height"
                android:minWidth="@dimen/zero_height"
                android:text="@string/string_choose_who_to_follow"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorBlack" />


            <FrameLayout
                android:id="@+id/frame_layout_cnct_fb_login_with_fb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin24"
                android:layout_marginTop="@dimen/margin30"
                android:background="@drawable/button_style"
                android:padding="@dimen/padding15">

                <d1marine.com.nasgram.customui.CustomTextViewBold
                    android:id="@+id/text_cnct_fb_login_with_fb"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:drawableLeft="@drawable/facebook_icon"
                    android:drawablePadding="@dimen/padding5"
                    android:gravity="center"
                    android:minHeight="@dimen/zero_height"
                    android:minWidth="@dimen/zero_height"
                    android:text="@string/string_login_with_facebook"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/colorWhite" />
            </FrameLayout>

        </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/padding15"
        android:orientation="vertical">

            <d1marine.com.nasgram.customui.CustomTextViewBold
                android:id="@+id/text_cnct_fb_skip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:minHeight="@dimen/zero_height"
                android:minWidth="@dimen/zero_height"
                android:textSize="12sp"
                android:text="@string/string_skip"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

</RelativeLayout>

