<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ScrollView

        android:id="@+id/scroll_view_login"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:orientation="vertical">

            <d1marine.com.nas.customui.CustomTextViewBold
                android:id="@+id/text_user_det_enter_name_pswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin10"
                android:gravity="center"
                android:minHeight="@dimen/zero_height"
                android:minWidth="@dimen/zero_height"
                android:text="@string/string_enter_name_password"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorBlack" />


            <d1marine.com.nas.customui.CustomEditText
                android:id="@+id/edit_text_user_det_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin30"
                android:background="@drawable/edittext_style"
                android:hint="@string/string_full_name"
                android:inputType="textCapSentences"
                android:minHeight="@dimen/zero_height"
                android:minWidth="@dimen/zero_height"
                android:padding="@dimen/padding15"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorGrey" />

            <d1marine.com.nas.customui.CustomEditText
                android:id="@+id/edit_text_user_det_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin10"
                android:layout_marginTop="@dimen/margin10"
                android:background="@drawable/edittext_style"
                android:hint="@string/string_password"
                android:inputType="textPassword"
                android:minHeight="@dimen/zero_height"
                android:minWidth="@dimen/zero_height"
                android:padding="@dimen/padding15"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorGrey" />


            <d1marine.com.nas.customui.CustomTextViewBold
                android:id="@+id/text_user_det_next_active"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin10"
                android:background="@drawable/button_style"
                android:gravity="center"
                android:minHeight="@dimen/zero_height"
                android:minWidth="@dimen/zero_height"
                android:padding="@dimen/padding15"
                android:text="@string/string_next"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorWhite" />

            <d1marine.com.nas.customui.CustomTextViewBold
                android:id="@+id/text_user_det_next_inactive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin10"
                android:background="@drawable/disabled_button_style"
                android:gravity="center"
                android:minHeight="@dimen/zero_height"
                android:minWidth="@dimen/zero_height"
                android:padding="@dimen/padding15"
                android:text="@string/string_next"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorFadeOrange" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>

